Address some suggestions from JHEP referee. Update VBFH.tex and Reply.tex for the changes

--- a/JHEPreport/Reply.tex
+++ b/JHEPreport/Reply.tex
@@ -37,16 +37,21 @@
 \section*{Everywhere}
 \begin{enumerate}
 	\item Several plots mention “Les Houches 2019”. Does it mean that some of these results have been already presented in the report of Les Houches 2019? If yes, this should be made clearer (probably in the introduction).
+
+{\bf Update:} This study was initiated during the Les Houches 2019 workshop. Only the fixed order results for Higgs pT distribution were presented in Les Houches 2019 report. We now remove the label regarding "Les Houches 2019" in all plots of this study and add a brief explanation in the second last paragraph of the introduction about the relation to Les Houches 2019 report. 
 \end{enumerate}
 
 \section*{Section I}
 \begin{enumerate}
-\item While not completely overlapping with the present study, some inter- esting references are missing. For example, arXiv: 1802.09955 and 1805.04446 are complimentary to it and should be cited. In general, I would encourage the authors to present a more detailed review of the theoretical status of VBF at the LHC in the introduction.
+\item While not completely overlapping with the present study, some interesting references are missing. For example, arXiv: 1802.09955 and 1805.04446 are complimentary to it and should be cited. In general, I would encourage the authors to present a more detailed review of the theoretical status of VBF at the LHC in the introduction.
 \end{enumerate}
 \section*{Section II}
 \begin{enumerate}
 \item It is correct that PDF4LHC15\_30 NNLO is used for all predictions (even at NLO)? This should be made explicit.
-\item The description of the Powheg predictions around Eq. (5) is a bit un- clear and clarifications should be provided. In particular, it is not clear how this prediction differs from a complete NLO QCD+PS prediction. Does it differ by the virtual corrections to the decay only? If possible, an estimate of the approximation would be useful. Also, while Eq. (5) is correct when integrating over the whole phase space, it is not true in the presence of cuts (especially close to resonances). Some comments on it would also be welcome.
+
+{\bf Update:} Yes, we use the same set of PDFs with the central group values everywhere in this study. This setup helps to quantify the pure different between fixed order and parton shower corrected predictions. This is now explained in this section when introducing the setup of the calculation. 
+
+\item The description of the Powheg predictions around Eq. (5) is a bit unclear and clarifications should be provided. In particular, it is not clear how this prediction differs from a complete NLO QCD+PS prediction. Does it differ by the virtual corrections to the decay only? If possible, an estimate of the approximation would be useful. Also, while Eq. (5) is correct when integrating over the whole phase space, it is not true in the presence of cuts (especially close to resonances). Some comments on it would also be welcome.
 \end{enumerate}
 
 \section*{Section III}
@@ -84,8 +89,13 @@
 \section*{Section VI}
 \begin{enumerate}
 \item ``Precise theoretical predictions for both signal and background processes are of utmost importance in order to harness the full statistical power of LHC event samples and have therefore been computed up to N3LO accuracy." I believe that this statement is not correct as all pro- cesses meant here are not known up to N3LO (QCD) accuracy. This should be corrected.
+
+{\bf Update:} The comment is correct. Only the inclusive Higgs production in VBF channel has been calculated with N3LO (QCD) accuracy within struture function approach. Background process such as Higgs+2jets production from ggF channel is only available at NLO. We correct the text accordingly. 
+
 \item ``In this manuscript we have presented a detailed comparison of the two types of calculations, i.e. NLOPS and NNLO [..]." I think this is also not correct. To my view, Section V does not qualify (yet?) for a ``detailed" study.
 \item ``This paper follows a study with a similar spirit carried out with dijet, Z-boson + jet and Higgs boson + jet production at the LHC." Please provide the references.
+
+{\bf Update:} The reference is now added.
 \end{enumerate}
 
 
