--- a/arxiv/VBFH.tex
+++ b/arxiv/VBFH.tex
@@ -57,7 +57,7 @@
 \section{Introduction}
 \label{sec:introduction}
 \begin{figure}[t]
-  \includegraphics[width=0.75\textwidth]{figures/vbflo.pdf}
+  \includegraphics[width=0.75\textwidth]{vbflo.pdf}
   \caption{Leading order contributions to $pp\to h+2$~jets.
   Figures~(a) and~(b) show VBF-type diagrams, Fig.~(c) is of the Higgs-Strahlung type with $V\to jj$,
   and Figs.~(d) and~(e) are representative gluon-fusion-type diagrams (where the black square
@@ -102,7 +102,7 @@ The primary goal of this phenomenological study is to investigate the kinematic 
 \footnote{We do not consider the $t\bar{t}H$ process in this study, as it is subdominant and relatively easily distinguished from electroweak $Hjj$ production via top-quark anti-tagging.} Simple jet counting can be used to improve the separation of  EW $Hjj$ production from gluon-gluon fusion, but a separation of \VBF from \VH becomes more difficult at high $p_T$.
 In spite of this difficulty, it is still important to determine the coupling of the Higgs boson to vector bosons at high $p_T$, where new physics has the possibility of affecting both \VH and \VBF production~\cite{Araz:2020zyh}.
 
-We will explore the robustness of the theoretical predictions in the high $p_T$ VBF region by comparing fixed-order results at NLO and NNLO with NLO predictions matched to parton showers (NLOPS), with a particular emphasis on the dependence of the cross sections on the jet radius. This comparison study is similar in spirit to the study performed in the context of the Les Houches 2017 workshop~\cite{Bellm:2019yyh}, which focused on gluon-gluon fusion Higgs boson production in the presence of an additional jet.
+We will explore the robustness of the theoretical predictions in the high $p_T$ VBF region by comparing fixed-order results at NLO and NNLO with NLO predictions matched to parton showers (NLOPS), with a particular emphasis on the dependence of the cross sections on the jet radius. This comparison study is similar in spirit to the study performed in the context of the Les Houches 2017 workshop~\cite{Bellm:2019yyh}, which focused on gluon-gluon fusion Higgs boson production in the presence of an additional jet. The current study was initiated during the Les Houches 2019 workshop~\cite{Amoroso:2020lgh}, where the fixed order results of Higgs transverse momentum distribution were presented. 
 
 This paper is organized as follows. In Section~\ref{sec:setup} we introduce the theoretical inputs and computational tools used in this study, and in Section~\ref{sec:characteristics} we detail the general characteristics of Higgs boson production processes. Section~\ref{sec:conesize} examines the impact of the jet size on the Higgs + two or more jets cross sections at both fixed order and with NLOPS predictions. In Section~\ref{sec:tools} we compare the different computational approaches and estimate the uncertainties related to the NLOPS simulations used by experiments. We conclude in Section~\ref{sec:conclusions}.
 
@@ -126,7 +126,7 @@ Theoretical uncertainties are estimated by varying QCD renormalization ($\mu_R$)
 \end{equation}
 The sum over partons in the second term considers any final state QCD partons including from real radiation and from the $V\to jj$ decay in the \VH process.
 
-We use 7-point scale variation, eliminating the two antipodal combinations $(\mu_R,\mu_F)=(\mu/2,2\mu)$ and $(\mu_R,\mu_F)=(2\mu,\mu/2)$. PDF4LHC15\_30 NNLO PDFs~\cite{Butterworth:2015oua} are used.
+We use 7-point scale variation, eliminating the two antipodal combinations $(\mu_R,\mu_F)=(\mu/2,2\mu)$ and $(\mu_R,\mu_F)=(2\mu,\mu/2)$. For the choice of parton distribution functions (PDFs) for initial states, we use the central group of PDF4LHC15\_30 NNLO PDFs~\cite{Butterworth:2015oua} throughout the calculation.
 Predictions have been generated with \NNLOJET, \Sherpa, \PWG (matched to \PY and \HW) and \HW standalone. The detailed setup for each of these programs is listed below. Fixed-order results are nominally computed using \NNLOJET, and all other simulations have been cross-checked against \NNLOJET up to NLO precision.
 NLOPS matched simulations presented here include parton-shower effects and simulations of beam remnant dynamics, but no hadronization or multi-parton interactions.
 Analyses are performed with Rivet~\cite{Buckley:2010ar,Bierlich:2019rhm}.
@@ -343,6 +343,9 @@ See Fig.~\ref{fig:incl_njets} and the main text for details.}
 Figure~\ref{fig:incl_pth} (left) shows the transverse momentum distribution of the Higgs boson for gluon-gluon fusion (both in the effective field theory and with top mass corrections), \VBF, \VH, and EW $Hjj$ production. The lower panels display the ratio of the predictions varying jet radius over the reference radius, $R=0.4$. A minimum of two jets is required. All processes shown have a peak at a transverse momentum in the range from 80-100~GeV. The gluon-gluon fusion predictions  grow with respect to \VBF/$Hjj$ as the Higgs boson transverse momentum increases. The ratio of $Hjj$ to \VBF is roughly constant as a function of $p_T$. For \VBF and gluon-gluon fusion, the cross section increases with increasing $R$ for Higgs transverse momenta less than 150~GeV. In this region, a larger value of $R$ makes it easier for the second jet to have a transverse momentum larger than the 30~GeV threshold. Gluon-gluon fusion has a larger $R$ dependence at low $p_T$ than \VBF.
 \VH has a somewhat more complex behavior. The cross section increases for larger $R$ at low $p_T$, as also observed for the other two processes, but decreases for larger $R$ at high $p_T$. The high $p_T$ behavior  results from the loss of one of the jets from the $V$ decay,
 due to the two quark originating from the $V$ decay merging at high $p_T$ with larger jet radius. This situation then requires a radiated jet to be above the transverse momentum threshold to fulfill the requirement of a second jet in the event.
+%This will be explained in more detail below.
+
+
 
 The Higgs boson plus jet transverse momentum distribution is shown in the right panel of Fig.~\ref{fig:incl_pth}.
 The gluon-gluon fusion process dominates for transverse momentum values below 30~GeV and above approximately 70~GeV,
@@ -523,6 +526,7 @@ See Fig.~\ref{fig:incl_njets} and the main text for details.}
 \end{figure}%%
 \begin{figure}[p]
     \centering
+    %\includegraphics[width=\textwidth]{figures/vbfvh/vbfvh_dr04_res_delta_y_jj12.pdf}
     \begin{minipage}{0.28\textwidth}
      \includegraphics[width=\textwidth]{figures/vbfvh/nores-pt0-main.pdf}
      \includegraphics[width=\textwidth]{figures/vbfvh/nores-pt0-ratio1.pdf}
@@ -689,37 +693,49 @@ With the above comparisons of characteristic observables from gluon-gluon fusion
 \end{figure}
 
 
-As a result of two jets being present already at the Born level, it is interesting to investigate jet-radius-dependent effects.
-In a previous study, we compared the effects of varying the jet radius $R$ in the anti-$k_t$ jet algorithm for two-to-two scattering processes at both fixed-order (with up to NNLO QCD corrections) and for NLOPS predictions,  for dijet, Higgs-plus-jet and vector-boson-plus-jet productions~\cite{Bellm:2019yyh}. Here we present a complementary study for two-to-three processes from \VBF production.
+As a result of two jets being present already at the Born level, it is interesting to investigate jet-radius-dependent effects. %arising from the jet algorithm, even for relatively inclusive observables.
+In a previous study, some of us compared the effects of varying the jet radius $R$ in the anti-$k_t$ jet algorithm for two-to-two scattering processes at both fixed-order (with up to NNLO QCD corrections) and for NLOPS predictions, for dijet, Higgs-plus-jet and vector-boson-plus-jet productions~\cite{Bellm:2019yyh}. Here we present a complementary study for two-to-three processes from \VBF production. The jet-radius-dependent effects of \VBF production was first studied in~\cite{Rauch:2017cfu} with up to NNLO QCD corrections for fiducial cross sections with ``VBF-cuts". In the current study, we apply different scenarios of fiducial cuts to exam their impact to the Higgs transverse momentum distribution and also compare the fixed order predictions with parton shower corrections.
 The fixed-order calculations include corrections up to NNLO QCD  using \NNLOJET, and NLOPS simulations are obtained from the Sherpa framework (Catani-Seymour dipoles).%
 \footnote{NLOPS predictions obtained with Sherpa, Herwig, POWHEG (matched to Pythia or Herwig) are found to be in excellent agreement, thus in this section we only show Sherpa predictions.}
 We observe in general good agreement between  the NNLO and NLOPS predictions,  with the exception of very large Higgs transverse momentum region with the application of VBF cuts. We will return to this mismatch later in this section.
 
 The left panels of Fig.~\ref{fig:fig_Higgs_pT_NNLO_incandATLAS} illustrate the Higgs boson $p_T$ distribution as a function of the jet radius $R$, normalized to the results obtained with $R=0.4$, for inclusive selection cuts. The top panel shows a comparison between the central scale predictions from fixed-order calculations and Sherpa (NLOPS). The
+%relative size of the
 higher order corrections and their scale uncertainties are normalized to those at NLO in the second row. Within the structure function approach, the LO results  have only a factorization scale dependence that arises from the DGLAP evolution of the quark PDFs. For a  Higgs boson produced with zero $p_T$, the center of mass energy is approximately 200~GeV (accounting for  the mass of the Higgs boson and the transverse momenta of the two (or more) jets). This mass/energy scale results in a small DGLAP evolution dependence.
+%, even at LO.
 For larger Higgs boson transverse momenta (200 to 600~GeV),  DGLAP evolution occurs  with a larger scale and the LO scale uncertainty increases from 5\% to 10\%.  With the addition of  higher order corrections, new initial state partonic channels  contribute and the resulting scale uncertainties depend on their interplay with the Born level subprocesses,  as well as on virtual corrections and the running of the strong coupling $\alpha_s$. We observe significant corrections from LO to NLO, with the NLO scale variation band outside the range of LO uncertainties, throughout the full transverse momentum region. Perturbative corrections start to converge at $p_{T,h}>200$ GeV from NLO with scale uncertainty about $\pm2\sim 3\%$. The NNLO corrections further reduce the scale uncertainty, to the level of $\pm 1$\%. The NNLO corrections also modify the central predictions, for $p_{T,h}\le 200$~GeV, so that the cross sections lie outside the NLO scale variation band. For $p_{T,h}\ge 200$~GeV, the NNLO scale variation band overlaps with the NLO uncertainty band. NLOPS predictions in this range  agree well with the NNLO fixed-order results. The effects of multiple gluon radiation from the parton shower seem to agree well with  the modifications of the NLO distribution resulting from the NNLO corrections.
+%, for $p_{T,h}\le 200$~GeV.
 
 In the third to the fifth row, we present  normalized distributions (with respect to the cross sections for $R=0.4$) for eight different $R$ values from 0.3 to 1.0.  Jet-radius-dependent effects are shown for NLO (third row), NLO plus parton shower (fourth row) and NNLO (fifth row). For $p_{T,h}\ge 150-200$~GeV, there is a relatively small dependence of the cross section on the jet size. However, there is a sizable variation of the cross section in the small transverse momentum region. This is due to the requirement that there be at least two jets  in the event, each with $p_T \ge 30$~GeV.
+%The impact to the phenomenology outcome has two folds.
 For small $m_{jj}$ and  $\Delta  y_{j1,j2}$, the two leading jets and the accompanying real radiation tend to be combined into a single jet as the jet radius increases, and thus the event fails the minimum two jet requirement (this can be seen also in Figs.~\ref{fig:incl_delta_y_jj12_mc} and~\ref{fig:incl_m_jj12_mc}). In the large $m_{jj}$ and the large $\Delta y_{j1,j2}$ regions, the final state partons are well separated and more likely to be identified as separate jets.
+%even after the inclusion of additional radiation,
+%provided that multiple emissions which escape from the tagged jet do not significantly reduce the transverse momentum of the original partons.
 With increasing jet radius, more radiation is added to the tagging jets, allowing the event to more easily pass the threshold $p_T$ requirement for the two final-state jets.
 For $p_{T,h}\le 200$~GeV, the two leading jets tend to have
+%accompanying jet activities mainly involve fiducial regions with
 a moderate value of  $m_{jj}$ (peaked at 300 GeV in Fig.~\ref{fig:incl_m_jj12_mc}) and large $\Delta  y_{j1,j2}$ (peaked at 4.2 in Fig.~\ref{fig:incl_delta_y_jj12_mc}) resulting in the enhancements (or reduction for R=0.3) for the various cone sizes shown in the third to fifth row of Fig.~\ref{fig:fig_Higgs_pT_NNLO_incandATLAS}.
 There is a shoulder for $p_{T,h}$ on the order of 70~GeV due to the minimum two jet requirement, after which all ratios converge to unity.
 
 For $p_{T,h}\ge 200$~GeV, according to Figs.~\ref{fig:incl_delta_y_jj12_mc} and~\ref{fig:incl_m_jj12_mc}, the two leading  transverse momenta jets often originate from the same parent parton (due to hard gluon radiation off of the lead quark jet, and the relative softness of the 2nd quark tagging jet at high Higgs boson $p_T$).  As a result, the enhancement in the small $m_{jj}$ (peaked at 100 GeV) and small $\Delta y_{j1,j2}$ (peaked at 0.5) region results in the  differential $p_{T,H}$ cross section  decreasing mildly with increasing jet radius, due to the merging of the two jets arising from the same quark line.
 
 Compared to the inclusive cross section with R$=0.4$, we observe a ``pinch point'', for NLO, NLOPS and NNLO, where the \VBF cross sections are insensitive to the  jet cone size. At this pinch point,  the predictions also have the minimum scale variation. In the vicinity of the pinch point, most of the events have two well-separated jets, for which a  variation of jet radius or a variation of the evolution scale would not affect the cuts applied to the inclusive Higgs $p_T$ cross section.
+%When jet definition affects the fiducial region with minimum effects,
 As a result,
+%the cancellation of scale variations become maximized,
 the scale uncertainty is also reduced.
 
 The pinch point is at 150~GeV for NLO compared to 200~GeV for NNLO. One possible explanation for the difference is that the additional gluon radiation present at NNLO provides extra recoil for the Higgs boson.
 The scale uncertainties around the pinch point are reduced from $\pm$0.2\% at NLO to $\pm$0.1\% at NNLO, with the numerical integration error at the same level.
 
 In general for the Higgs $p_T$ spectrum, the scale variations are smaller for larger values of  jet R.  This supports the argument that there is a better cancellation of the real and virtual corrections as the \VBF phase space becomes more inclusive (more radiation absorbed in larger R jets).
+%more inclusive fiducial phase space in VBF channel.
 This is in contrast to the gluon-gluon fusion channel of Higgs-plus-jet, vector-boson-plus-jet or dijet production in the study of~\cite{Bellm:2019yyh}, where, instead, scale variation uncertainties mildly increase with a larger choice of jet radius. We attribute the phenomenology to the accidental cancellation among the virtual and real radiation at smaller values of jet radius. In general, the impact of such behavior needs to be studied on a process-by-process basis.
 
 The $R$-dependence for the NNLO \VBF cross section using the ATLAS fiducial selection criteria for \VBF production is shown in the right panel of Fig.~\ref{fig:fig_Higgs_pT_NNLO_incandATLAS}. In comparison to the inclusive case (in the left panel), the requirement that the two leading jets be well separated ($\Delta y_{jj} \ge 3$, $\Delta \phi_{Hj_{12}} \geq 2.8 $ and $m_{jj} \geq 400$~GeV) results in increasingly positive corrections as the  jet radius increases.
+%The application of the ATLAS \VBF fiducial cuts selects events with large $m_{jj}$ and large $\Delta y_{j1,j2}$ that the interaction with jet reconstruction algorithm only enhance the distribution with increasing jet radius.
 The enhancement observed  for Higgs transverse momenta near zero, for the largest cone sizes, has increased from 10\% (15\%) to 70\% (80\%) at NLO (NNLO). The  pinch point disappears at both NLO and NNLO.
+%due to the requirement of more exclusive fiducial phase space.
 The NLOPS predictions agree with the NNLO fixed-order results for $p_{T,h}\le 400$~GeV, and differ  from NNLO by 10\% as the Higgs boson $p_T$ approaches 1~TeV. Both the $R$-dependence of the jet cross sections and the size of the NLO and NNLO corrections depend on the amount of real radiation. Thus, it is no surprise that there are similarities between the NLO and NNLO K-factors, and the observed normalized $R$ variations for the cross sections.
 
 
@@ -743,7 +759,9 @@ For the \textit{heavy-center} fiducial region, at small $p_{T,h}$, the jet cone 
 With the presence of multiple real emissions from higher order corrections and parton showers, we observe a sensitivity to the choice of jet radius  in the NLOPS and NNLO predictions. An enhancement of the cross section with increasing jet cone size at  high $p_{T,h}$ is observed, which is due to the inclusion of more energy  in the two leading jets, leading to a greater potential for passing the requirement of $m_{j1j2} \ge 350$~GeV.
 
 For the light sector shown in Fig.~\ref{fig:fig_Higgs_pT_NNLO_large_light-center}, the steeply falling  distributions at large $\Delta y_{jj}$  indicate that the two leading jets rapidly run out of available phase space  to recoil from a Higgs boson with large $p_{T,h}$. Higher order, as well as parton shower corrections, are essential to provide more phase space volume.
+%opened to provide enough recoil for the Higgs boson.
 Increasing the jet radius results in more partonic emissions being clustered into one jet, which  tends to remove the event from the defined  light phase space.
+%and with at least two identified jets.
 We observe that the effects described above result in  a decrease of the cross section in the \textit{light-center} region  of more than 600\% when the jet radius changes from 0.3 to 1.0 (for $p_{T,h}$ at 1 TeV).
 
 With a comprehensive study on the Higgs boson transverse momentum distributions in this section, we have quantified the phenomenological impact of different choices of jet cone size, as well as the properties of $p_{T,h}$ distributions outside the fiducial region defined by the ``VBF-cuts". With the observation of excellent agreement between NLOPS and NNLO in general, we also discover mild deviations in the boosted $p_{T,h}$ region when requiring large $m_{jj}$ and $\Delta y_{jj}$. To further quantify the consistency between various NLOPS tools and fixed-order calculations, we present comparisons of characteristic differential observables from the VBF production channel in the following section.
@@ -883,12 +901,12 @@ the NLOPS results with NLL resummed predictions, once these become available.
 
 \section{Conclusion}
 \label{sec:conclusions}
-Electroweak Higgs boson plus two-jet production is one of the prime channels to study the structure of the electroweak sector of the Standard Model at the Large Hadron Collider. Future running at the  LHC will allow the accumulation of a very large data sample, pushing the Higgs boson measurements out to high transverse momentum, where the possibility of the discovery of new physics exists. The vector-boson fusion production mode in particular offers the opportunity for a detailed measurement of Higgs boson interactions involving the massive gauge bosons. Precise theoretical predictions for both signal and background processes are of utmost importance in order to harness the full statistical power of LHC event samples and have therefore been computed up to N$^3$LO accuracy. Experimental analyses do however depend on a more detailed modeling of events, including in particular resummation effects, underlying event and hadronization. The proper description of these aspects of QCD hinges on Monte Carlo event generators, which describe the hard scattering process only at NLO accuracy. In this manuscript we have presented a detailed comparison of the two types of calculations, \emph{i.e.} NLOPS and NNLO, and we have compared a wide range of parton showers, including in particular Herwig, Pythia and Sherpa,
+Electroweak Higgs boson plus two-jet production is one of the prime channels to study the structure of the electroweak sector of the Standard Model at the Large Hadron Collider. Future running at the  LHC will allow the accumulation of a very large data sample, pushing the Higgs boson measurements out to high transverse momentum, where the possibility of the discovery of new physics exists. The vector-boson fusion production mode in particular offers the opportunity for a detailed measurement of Higgs boson interactions involving the massive gauge bosons. Precise theoretical predictions for both signal and background processes are of utmost importance in order to harness the full statistical power of LHC event samples and have therefore been studied intensively using cutting-edge theoretical tools. Experimental analyses do however depend on a more detailed modeling of events, including in particular resummation effects, underlying event and hadronization. The proper description of these aspects of QCD hinges on Monte Carlo event generators, which describe the hard scattering process only at NLO accuracy. In this manuscript we have presented a detailed comparison of the two types of calculations, \emph{i.e.} NLOPS and NNLO, and we have compared a wide range of parton showers, including in particular Herwig, Pythia and Sherpa,
 and both  additive and multiplicative matching algorithms (MC@NLO and POWHEG). We have studied the jet-radius dependence of the cross sections as a means of better understanding the higher order corrections and the scale uncertainties at each order. We have investigated the behavior of the cross sections at high Higgs boson transverse momentum, a region not fully explored from the phenomenological perspective, but one accessible with the data to be taken at the high-luminosity LHC.
 
 We have found generally good agreement between NLOPS and NNLO predictions, apart from some intricate effects related to choices of the factorization scale, which can induce large logarithmic corrections.   We have studied the \VBF production mode and associated backgrounds in detail over the full Higgs boson transverse momentum range. We have also found that there is a large $R-$ dependence on the \VBF cross sections  that can be understood in terms of the kinematic  cuts applied to the event. The $R-$dependent effects are largest at low to moderate Higgs boson $pT$, and with the application of typical \VBF selection cuts.  We have examined the impact of a resonance dijet mass veto to reduce the \VH contribution, and have shown that at high $p_T$, a broader definition of the veto must be considered to achieve the best separation between the two processes. We have examined the effectiveness of a $\Delta y_{jj}$ cut, as a function of jet $R$, Higgs boson $p_T$ and definition of the dijet system and have shown that the effectiveness of such cuts decreases as the Higgs boson $p_T$ increases. At high $p_T$, the Higgs boson recoils primarily against the lead tagging jet, with the second (tagging) jet being relatively soft. The emission of an additional jet from the lead jet grows with the lead jet transverse momentum. Given the softness of the second tagging jet, the emitted jet often becomes the second highest $p_T$ jet in the event, often leading to low values of $\Delta y_{jj}$, if the two highest $p_T$ jets are chosen to define the \VBF kinematics.  The further improvement of the \VBF Higgs boson signal to background is possible through application of cuts on additional jets present in the event. We  have proposed the usage of a global rather than a central jet veto to enhance the signal-to-background ratio, both because of the effectiveness of such a cut and the relative ease of understanding its impact on the accuracy of the theoretical predictions. This will provide the opportunity to further increase the  precision of perturbative calculations by combining existing NNLO predictions with NLL resummation, also opening the possibility for further validation of Monte Carlo event generators in the Sudakov region.
 
-A better understanding of processes involving jets at the LHC can be gained by a comprehensive study of the processes using both fixed order (NLO and NNLO) and NLOPS calculations, all conducted within a common framework. The variation of the jet radius allows a more detailed understanding of the higher order corrections and on the remaining scale dependence. This paper follows a study with a similar spirit carried out for dijet, Z-boson + jet and Higgs boson + jet production at the LHC.
+A better understanding of processes involving jets at the LHC can be gained by a comprehensive study of the processes using both fixed order (NLO and NNLO) and NLOPS calculations, all conducted within a common framework. The variation of the jet radius allows a more detailed understanding of the higher order corrections and on the remaining scale dependence. This paper follows a study~\cite{Bellm:2019yyh} with a similar spirit carried out for dijet, Z-boson + jet and Higgs boson + jet production at the LHC.
 
 \section{Acknowledgments}
 \label{sec:acknowledgments}
@@ -909,5 +927,4 @@ J.L. is supported by the Science and Technology Research Council (STFC) under th
 Ernest Rutherford Fellowship ST/S005048/1.
 
 \bibliography{references}
-
 \end{document}
