--- a/arxiv/references.bib
+++ b/arxiv/references.bib
@@ -65,6 +65,32 @@
       url           = "https://cds.cern.ch/record/2667167",
 }
 
+@article{Rauch:2017cfu,
+    author = "Rauch, Michael and Zeppenfeld, Dieter",
+    title = "{Jet clustering dependence of Higgs boson production in vector-boson fusion}",
+    eprint = "1703.05676",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "KA-TP-08-2017",
+    doi = "10.1103/PhysRevD.95.114015",
+    journal = "Phys. Rev. D",
+    volume = "95",
+    number = "11",
+    pages = "114015",
+    year = "2017"
+}
+
+@inproceedings{Amoroso:2020lgh,
+    author = "Amoroso, S. and others",
+    title = "{Les Houches 2019: Physics at TeV Colliders: Standard Model Working Group Report}",
+    booktitle = "{11th Les Houches Workshop on Physics at TeV Colliders}: {PhysTeV Les Houches}",
+    eprint = "2003.01700",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    month = "3",
+    year = "2020"
+}
+
 @article{Baberuxki:2019ifp,
     author = "Baberuxki, Nick and Preuss, Christian T. and Reichelt, Daniel and Schumann, Steffen",
     title = "{Resummed predictions for jet-resolution scales in multijet production in e$^{+}$e$^{−}$ annihilation}",
