--- a/JHEPreport/Reply.tex
+++ b/JHEPreport/Reply.tex
@@ -61,12 +61,15 @@ No approximation is made since at NLO there is no interference between radiation
 \end{enumerate}
 
 \section*{Section III}
+{\bf Update:} I divided Section III into several sections so that it doesn't appear too monolithic. I think it's better. 
 \begin{enumerate}
 \item ``The gluon-gluon fusion contributions are shown in both the Higgs effective theory (HEFT) and approximate Standard Model, using the reweighting technique described in Sec. II A. " Sec. II A. is not really illuminating on what is actually done there. This should be defined a bit more precisely and in particular how the two predictions differ. Also, why are both computations for ggF not provided in Table 1 (as on Fig.3) for example? Note that the labelling is not consistent between the plots and the table.
 \item A particular emphasis is put on the distinctions between VBF production with respect to VH. Such a distinction is actually unphysical as both production mechanism are actually undistinguishable (as they interfere) and posses the same physics content. The authors should explain why they want to treat VH as a background as, a priori, no distinction is required.
 \item In the footnote of page 2, it is indicated that ttH is not relevant for this study. On the other hand, it is shown on Fig.2 which is a bit contradictory. In particular, the implementation of cuts for ttH is not clear. From the caption, it is says “all hadronic”, probably meaning a 4j+2j\_b final state. In this case, how is implemented the event selection for this process? Are the bottom jets counted as jets? Also, more information on how this process is computed (given it is presented) should be given in the text (and not only in the caption).
+{\bf Update:} JH: I modified the wording of the footnote somewhat and added references for the ATLAS and CMS discovery papers for ttH. 
 \item How the EW corrections are implemented for each process is unclear. Some references are given in the caption of Fig.2 but it would be more useful to have more details in the text instead.
 \item Concerning Fig.2, the event selection should also be mentioned in the text (and not only in the caption).
+{\bf Update:} I moved some of it to the text as well. 
 \item On page 11, ``The fractional cross section distributions for the Higgs boson production processes are shown in the top panel of Fig. 10 as a function of $\Delta y_{jj}$ using the two leading jets (i.e. the ones with largest pT) for the three different Higgs boson pT cuts." I believe it should be $\Delta y_{jj}^{\text{min}}$ according to what is shown on the plot. This should also be made clearer in the text.
 \item Several times, the authors use the word ``original" to describe a jet without defining it explicitely. From the context, one somehow understands that this is a ``Born" jet but such a definition is highly ambiguous in particular at higher order. More information should be provided.
 \end{enumerate}
