Some ansewers in Section 3

--- a/JHEPreport/Reply.tex
+++ b/JHEPreport/Reply.tex
@@ -33,6 +33,9 @@
 \date{}
 \maketitle
 
+We would like to thank the referee for his/her detailed reading of the manuscript and constructive criticism. Incorporating the raised points helped to significantly improve the quality of the paper.
+In the following we address each individual point raised by the referee. We hope the paper can now be accepted for publication.
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Everywhere}
 \begin{enumerate}
@@ -65,8 +68,17 @@ No approximation is made since at NLO there is no interference between radiation
 \item ``The gluon-gluon fusion contributions are shown in both the Higgs effective theory (HEFT) and approximate Standard Model, using the reweighting technique described in Sec. II A. " Sec. II A. is not really illuminating on what is actually done there. This should be defined a bit more precisely and in particular how the two predictions differ. Also, why are both computations for ggF not provided in Table 1 (as on Fig.3) for example? Note that the labelling is not consistent between the plots and the table.
 \item A particular emphasis is put on the distinctions between VBF production with respect to VH. Such a distinction is actually unphysical as both production mechanism are actually undistinguishable (as they interfere) and posses the same physics content. The authors should explain why they want to treat VH as a background as, a priori, no distinction is required.
 \item In the footnote of page 2, it is indicated that ttH is not relevant for this study. On the other hand, it is shown on Fig.2 which is a bit contradictory. In particular, the implementation of cuts for ttH is not clear. From the caption, it is says “all hadronic”, probably meaning a 4j+2j\_b final state. In this case, how is implemented the event selection for this process? Are the bottom jets counted as jets? Also, more information on how this process is computed (given it is presented) should be given in the text (and not only in the caption).
+
+{\bf Update:} The ttH process has been included in Fig. 2 for illustration of its impact. However, it is not considered in the rest of the paper. We updated footnote 2 and clarified this. Regarding the implementation of ttH for Fig. 2 we incorporated this information in the main text: for the fiducial selection shown in Fig. 2 (right) indeed the 4j+2j\_b final state has been considered treating bottom jets as jets.
+
 \item How the EW corrections are implemented for each process is unclear. Some references are given in the caption of Fig.2 but it would be more useful to have more details in the text instead.
+
+{\bf Update:} We updated the text accordingly including all relevant references.
+
 \item Concerning Fig.2, the event selection should also be mentioned in the text (and not only in the caption).
+
+{\bf Update:} We updated the text accordingly.
+
 \item On page 11, ``The fractional cross section distributions for the Higgs boson production processes are shown in the top panel of Fig. 10 as a function of $\Delta y_{jj}$ using the two leading jets (i.e. the ones with largest pT) for the three different Higgs boson pT cuts." I believe it should be $\Delta y_{jj}^{\text{min}}$ according to what is shown on the plot. This should also be made clearer in the text.
 \item Several times, the authors use the word ``original" to describe a jet without defining it explicitely. From the context, one somehow understands that this is a ``Born" jet but such a definition is highly ambiguous in particular at higher order. More information should be provided.
 \end{enumerate}
