--- a/JHEPreport/Reply.tex
+++ b/JHEPreport/Reply.tex
@@ -67,6 +67,9 @@ No approximation is made since at NLO there is no interference between radiation
 {\bf Update:} I divided Section III into several sections so that it doesn't appear too monolithic. I think it's better. 
 \begin{enumerate}
 \item ``The gluon-gluon fusion contributions are shown in both the Higgs effective theory (HEFT) and approximate Standard Model, using the reweighting technique described in Sec. II A. " Sec. II A. is not really illuminating on what is actually done there. This should be defined a bit more precisely and in particular how the two predictions differ. Also, why are both computations for ggF not provided in Table 1 (as on Fig.3) for example? Note that the labelling is not consistent between the plots and the table.
+
+{\bf Update:} The reweighting procedure is now specified in Sec. II with notations to distinguish labels of "SM", "HEFT" and "approx SM". {\bf Still need to make clear the ggF lable in Table.1 and Fig.3.}
+
 \item A particular emphasis is put on the distinctions between VBF production with respect to VH. Such a distinction is actually unphysical as both production mechanism are actually undistinguishable (as they interfere) and posses the same physics content. The authors should explain why they want to treat VH as a background as, a priori, no distinction is required.
 \item In the footnote of page 2, it is indicated that ttH is not relevant for this study. On the other hand, it is shown on Fig.2 which is a bit contradictory. In particular, the implementation of cuts for ttH is not clear. From the caption, it is says “all hadronic”, probably meaning a 4j+2j\_b final state. In this case, how is implemented the event selection for this process? Are the bottom jets counted as jets? Also, more information on how this process is computed (given it is presented) should be given in the text (and not only in the caption).
 
