--- a/JHEPreport/Reply.tex
+++ b/JHEPreport/Reply.tex
@@ -79,7 +79,7 @@ No approximation is made since at NLO there is no interference between radiation
 
 \item How the EW corrections are implemented for each process is unclear. Some references are given in the caption of Fig.2 but it would be more useful to have more details in the text instead.
 
-{\bf Update:} We updated the text accordingly including all relevant references.
+{\bf Update:} We updated the text accordingly including all relevant references. We also extended Fig. 2 in order to explicitly highlight the impact of the EW corrections.
 
 \item Concerning Fig.2, the event selection should also be mentioned in the text (and not only in the caption).
 
